--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/VivifyTest/nbproject/private/
+/vivify-test/nbproject/private/
+/zadatak/nbproject/private/
+/test/target/
